--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ div {
     text-align: left;
     margin-right: 50px;
     border-width: 2px 5px 0px 0px;
-    color: #C4C4C4;
+    color: #fff;
 }
 
 footer {
